@@ -141,6 +141,9 @@ breport [OPTIONS]
 	<tmp file directory
 	<bfast report file names>
 
+brg2fasta [OPTIONS]
+	<bfast reference genome file>
+
 bsort [OPTIONS]
 	<bfast report file name>
 	<memory limit in MB>
